--- a/compensations/pom.xml
+++ b/compensations/pom.xml
@@ -193,6 +193,22 @@
 
     <profiles>
         <profile>
+            <id>jdk17</id>
+            <activation>
+                <jdk>[17,)</jdk>
+            </activation>
+            <properties>
+                <jvm.args.modular>
+                    --add-modules=java.se
+                    --add-opens=java.base/java.security=ALL-UNNAMED
+                    --add-opens=java.base/java.lang=ALL-UNNAMED
+                    --add-opens=java.base/java.io=ALL-UNNAMED
+                    --add-opens=java.base/java.util=ALL-UNNAMED
+                    --add-opens=java.base/java.net=ALL-UNNAMED
+                </jvm.args.modular>
+            </properties>
+        </profile>
+        <profile>
             <id>arq</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
@@ -381,8 +397,14 @@
             <dependencies>
                 <dependency>
                     <groupId>org.jboss.arquillian.container</groupId>
-                    <artifactId>arquillian-weld-ee-embedded-1.1</artifactId>
+                    <artifactId>arquillian-weld-embedded</artifactId>
                     <version>${version.org.jboss.arquillian.container.weld}</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.junit.jupiter</groupId>
+                    <artifactId>junit-jupiter</artifactId>
+                    <version>${version.junit.jupiter}</version>
                     <scope>test</scope>
                 </dependency>
                 <dependency>
