--- a/txframework/pom.xml
+++ b/txframework/pom.xml
@@ -195,6 +195,22 @@
 
     <profiles>
         <profile>
+            <id>jdk17</id>
+            <activation>
+                <jdk>[17,)</jdk>
+            </activation>
+            <properties>
+                <jvm.args.modular>
+                    --add-modules java.se
+                    --add-opens=java.base/java.lang=ALL-UNNAMED
+                    --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+                    --add-opens=java.base/java.util=ALL-UNNAMED
+                    --add-opens=java.base/java.util.reflect=ALL-UNNAMED
+                    --add-exports java.base/sun.reflect=ALL-UNNAMED
+                </jvm.args.modular>
+            </properties>
+        </profile>
+        <profile>
             <id>arq</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
@@ -214,6 +230,7 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
                             <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                            <argLine>${server.jvm.args}</argLine>
                             <skip>false</skip>
                             <systemPropertyVariables combine.children="append">
                                 <!--
