--- a/rts/lra/test/pom.xml
+++ b/rts/lra/test/pom.xml
@@ -423,9 +423,7 @@
         <jdk>[17,)</jdk>
       </activation>
       <properties>
-        <jvm.args.modular>--add-modules=java.se
-          --add-opens=java.base/java.util=ALL-UNNAMED
-          --add-opens=java.base/java.util.reflect=ALL-UNNAMED
+        <jvm.args.modular>
           --add-opens=java.base/java.lang=ALL-UNNAMED
           --add-opens=java.base/java.lang.reflect=ALL-UNNAMED</jvm.args.modular>
       </properties>
