--- a/narayana-full/pom.xml
+++ b/narayana-full/pom.xml
@@ -457,6 +457,7 @@
                   </additionalJOptions>
                   <dependencySourceExcludes>
                     <dependencySourceExclude>javax.enterprise:cdi-api</dependencySourceExclude>
+                    <dependencySourceExclude>org.jboss.spec.javax.xml.bind:jboss-jaxb-api_2.3_spec</dependencySourceExclude>
                   </dependencySourceExcludes>
                 </configuration>
               </execution>
