--- a/ArjunaJTA/jms/pom.xml
+++ b/ArjunaJTA/jms/pom.xml
@@ -38,11 +38,18 @@
             <version>${version.org.jboss.spec.javax.transaction}</version>
             <scope>provided</scope>
         </dependency>
+        <!--
         <dependency>
             <groupId>org.jboss.spec.javax.jms</groupId>
             <artifactId>jboss-jms-api_2.0_spec</artifactId>
             <version>${version.org.jboss.spec.javax.jms.jboss-jms-api_2.0_spec}</version>
             <scope>provided</scope>
+        </dependency>
+        -->
+        <dependency>
+            <groupId>jakarta.jms</groupId>
+            <artifactId>jakarta.jms-api</artifactId>
+            <version>${version.jakarta.jms.jakarta-jms-api}</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.logging</groupId>
@@ -77,7 +84,7 @@
         </dependency>
         <dependency>
             <groupId>org.jboss</groupId>
-            <artifactId>jboss-transaction-spi</artifactId>
+            <artifactId>jboss-transaction-spi-jakarta</artifactId>
             <version>${version.org.jboss.jboss-transaction-spi}</version>
             <scope>test</scope>
         </dependency>
