--- a/XTS/pom.xml
+++ b/XTS/pom.xml
@@ -38,9 +38,13 @@
   </properties>
     <dependencies>
         <dependency>
+        <!-- jakarta TODO legacy
             <groupId>org.jboss.spec.jakarta.xml.bind</groupId>
-            <artifactId>jboss-jaxb-api_2.3_spec</artifactId>
             <version>${version.org.jboss.spec.jakarta.xml.bind.jboss-jaxb-api_2.3_spec}</version>
+            -->
+            <groupId>org.jboss.spec.javax.xml.bind</groupId>
+            <artifactId>jboss-jaxb-api_2.3_spec</artifactId>
+            <version>${version.org.jboss.spec.javax.xml.bind.jboss-jaxb-api_2.3_spec}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
