--- a/ArjunaJTA/spi/pom.xml
+++ b/ArjunaJTA/spi/pom.xml
@@ -56,7 +56,7 @@
     <dependencies>
         <dependency>
             <groupId>org.jboss</groupId>
-            <artifactId>jboss-transaction-spi</artifactId>
+            <artifactId>jboss-transaction-spi-jakarta</artifactId>
             <version>${version.org.jboss.jboss-transaction-spi}</version>
             <scope>provided</scope>
             <exclusions>
@@ -150,14 +150,25 @@
         <dependency>
             <groupId>jakarta.annotation</groupId>
             <artifactId>jakarta.annotation-api</artifactId>
-            <version>${version.javax.annotation}</version>
+            <version>${version.jakarta.annotation.jakarta-annotation-api}</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.inject</groupId>
+            <artifactId>jakarta.inject-api</artifactId>
+            <version>${version.jakarta.inject.jakarta.inject-api}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.spec.javax.ejb</groupId>
             <artifactId>jboss-ejb-api_3.1_spec</artifactId>
             <version>${version.org.jboss.spec.javax.ejb}</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+          <groupId>jakarta.resource</groupId>
+          <artifactId>jakarta.resource-api</artifactId>
+          <version>${version.jakarta.resource.jakarta-resource-api}</version>
         </dependency>
     </dependencies>
 
