--- a/rts/at/tx/pom.xml
+++ b/rts/at/tx/pom.xml
@@ -46,9 +46,9 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.jboss.spec.javax.servlet</groupId>
-      <artifactId>jboss-servlet-api_3.0_spec</artifactId>
-      <version>${version.org.jboss.spec.javax.servlet}</version>
+      <groupId>jakarta.servlet</groupId>
+      <artifactId>jakarta.servlet-api</artifactId>
+      <version>${version.jakarta.servlet.jakarta-servlet-api}</version>
       <scope>provided</scope>
     </dependency>
     <!-- Jersey -->
@@ -164,20 +164,20 @@
     </dependency>
     <!-- end undertow with RestEasy -->
     <dependency>
-      <groupId>org.jboss.spec.javax.interceptor</groupId>
-      <artifactId>jboss-interceptors-api_1.2_spec</artifactId>
-      <version>${version.org.jboss.spec.javax.interceptor}</version>
+      <groupId>jakarta.interceptor</groupId>
+      <artifactId>jakarta.interceptor-api</artifactId>
+      <version>${version.jakarta.interceptor.jakarta-interceptors-api}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>javax.enterprise</groupId>
-      <artifactId>cdi-api</artifactId>
-      <version>${version.javax.enterprise}</version>
+      <groupId>jakarta.enterprise</groupId>
+      <artifactId>jakarta.enterprise.cdi-api</artifactId>
+      <version>${version.jakarta.enterprise}</version>
       <scope>provided</scope>
       <exclusions>
         <exclusion>
           <groupId>org.jboss.interceptor</groupId>
-          <artifactId>jboss-interceptor-api</artifactId>
+          <artifactId>jakarta-interceptor-api</artifactId>
         </exclusion>
         <exclusion>
           <groupId>jakarta.annotation</groupId>
@@ -188,16 +188,15 @@
     <dependency>
       <groupId>jakarta.json</groupId>
       <artifactId>jakarta.json-api</artifactId>
-      <version>1.1.4</version>
+      <version>${version.jakarta.json.jakarta-json-api}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.jboss.spec.javax.transaction</groupId>
-      <artifactId>jboss-transaction-api_1.2_spec</artifactId>
-      <version>${version.org.jboss.spec.javax.transaction}</version>
+      <groupId>jakarta.transaction</groupId>
+      <artifactId>jakarta.transaction-api</artifactId>
+      <version>${version.jakarta.transaction.jakarta-transaction-api}</version>
       <scope>provided</scope>
     </dependency>
-
   </dependencies>
   <build>
     <plugins>
