--- a/rts/pom.xml
+++ b/rts/pom.xml
@@ -47,9 +47,13 @@ Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
 
   <dependencies>
     <dependency>
+    <!-- jakarta TODO
       <groupId>org.jboss.spec.jakarta.xml.bind</groupId>
-      <artifactId>jboss-jaxb-api_2.3_spec</artifactId>
       <version>${version.org.jboss.spec.jakarta.xml.bind.jboss-jaxb-api_2.3_spec}</version>
+      -->
+      <groupId>org.jboss.spec.javax.xml.bind</groupId>
+      <artifactId>jboss-jaxb-api_2.3_spec</artifactId>
+      <version>${version.org.jboss.spec.javax.xml.bind.jboss-jaxb-api_2.3_spec}</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
@@ -86,6 +90,7 @@ Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
       <profile>
         <id>community</id>
         <modules>
+        <!-- jakarta TODO use commit ead7de415b65c0073df7075b8549ec249bd3bb49
           <module>lra</module>
           <module>sra</module>
         </modules>
