--- a/txbridge/pom.xml
+++ b/txbridge/pom.xml
@@ -308,7 +308,7 @@
 
         <dependency>
             <groupId>org.jboss</groupId>
-            <artifactId>jboss-transaction-spi</artifactId>
+            <artifactId>jboss-transaction-spi-jakarta</artifactId>
             <version>${version.org.jboss.jboss-transaction-spi}</version>
             <scope>provided</scope>
         </dependency><dependency>
