JBTM-3588 wip getting most of the tests working

--- a/ArjunaJTA/narayana-jta/pom.xml
+++ b/ArjunaJTA/narayana-jta/pom.xml
@@ -214,9 +214,9 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.jboss.spec.javax.jms</groupId>
-      <artifactId>jboss-jms-api_2.0_spec</artifactId>
-      <version>${version.org.jboss.spec.javax.jms.jboss-jms-api_2.0_spec}</version>
+      <groupId>jakarta.jms</groupId>
+      <artifactId>jakarta.jms-api</artifactId>
+      <version>${version.jakarta.jms.jakarta-jms-api}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
