--- a/pom.xml
+++ b/pom.xml
@@ -242,7 +242,7 @@
     <version.maven.checkstyle-plugin>3.1.2</version.maven.checkstyle-plugin>
     <version.maven.jandex-plugin>1.0.6</version.maven.jandex-plugin>
     <version.mysql>8.0.25</version.mysql>
-    <version.org.apache.activemq>2.19.0</version.org.apache.activemq>
+    <version.org.apache.activemq>2.24.0</version.org.apache.activemq>
     <version.org.apache.ant>1.10.12</version.org.apache.ant>
     <version.org.apache.httpcomponents>4.2.1</version.org.apache.httpcomponents>
     <version.org.codehaus.mojo.jboss-maven-plugin>1.5.0</version.org.codehaus.mojo.jboss-maven-plugin>
@@ -805,9 +805,11 @@
     </profile>
     <profile>
       <id>community</id>
+      <!-- jakarta TODO package javax.swing is declared in module java.desktop, but module jakarta.annotation does not read it etc
       <modules>
         <module>narayana-full</module>
       </modules>
+      -->
       <properties>
         <version.orson>0.5.0</version.orson>
         <version.tanukisoft>3.2.3</version.tanukisoft>
