--- a/pom.xml
+++ b/pom.xml
@@ -372,6 +372,12 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>${version.compiler.plugin}</version>
+          <configuration>
+            <compilerArgs>
+              <!-- Remove this when org.jboss.logging becomes Jakarta compatible -->
+              <arg>-Aorg.jboss.logging.tools.addGeneratedAnnotation=false</arg>
+            </compilerArgs>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
