[JBTM-3697] Migrate jms tests to jakarta

--- a/ArjunaJTA/jms/pom.xml
+++ b/ArjunaJTA/jms/pom.xml
@@ -70,7 +70,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.activemq</groupId>
-            <artifactId>artemis-jms-server</artifactId>
+            <artifactId>artemis-jakarta-server</artifactId>
             <version>${version.org.apache.activemq}</version>
             <scope>test</scope>
         </dependency>
