--- a/pom.xml
+++ b/pom.xml
@@ -216,9 +216,11 @@
     <version.jakarta.inject.jakarta.inject-api>2.0.1</version.jakarta.inject.jakarta.inject-api>
     <version.jakarta.interceptor.jakarta-interceptors-api>2.1.0</version.jakarta.interceptor.jakarta-interceptors-api>
     <version.jakarta.jms.jakarta-jms-api>3.1.0</version.jakarta.jms.jakarta-jms-api>
+    <version.jakarta.enterprise.jakarta.enterprise.cdi-api>4.0.1</version.jakarta.enterprise.jakarta.enterprise.cdi-api>
     <version.jakarta.json-api>2.0.1</version.jakarta.json-api>
     <version.jakarta.json.jakarta-json-api>2.0.1</version.jakarta.json.jakarta-json-api>
     <version.jakarta.resource.jakarta-resource-api>2.1.0</version.jakarta.resource.jakarta-resource-api>
+    <version.jakarta.persistence.jakarta.persistence-api>3.1.0</version.jakarta.persistence.jakarta.persistence-api>
     <version.jakarta.servlet.jakarta-servlet-api>5.0.0</version.jakarta.servlet.jakarta-servlet-api>
     <version.jakarta.transaction.jakarta-transaction-api>2.0.0</version.jakarta.transaction.jakarta-transaction-api>
     <version.jakarta.ws.rs.jakarta-ws-rs-api>3.1.0</version.jakarta.ws.rs.jakarta-ws-rs-api>
