--- a/qa/TaskImpl.properties.template
+++ b/qa/TaskImpl.properties.template
@@ -34,18 +34,14 @@ COMMAND_LINE_1=-classpath
 # (TODO match on COMMAND_LINE_2=... instead)
 #
 COMMAND_LINE_2=\
-  dist${file.separator}narayana-full-5.13.1.Final-SNAPSHOT${file.separator}etc${file.separator}\
-  ${path.separator}dist${file.separator}narayana-full-5.13.1.Final-SNAPSHOT${file.separator}lib${file.separator}*\
-  ${path.separator}dist${file.separator}narayana-full-5.13.1.Final-SNAPSHOT${file.separator}lib${file.separator}ext${file.separator}*\
-  ${path.separator}ext${file.separator}fscontext.jar${path.separator}ext${file.separator}providerutil.jar\
-  ${path.separator}ext${file.separator}jboss-profiler-jvmti.jar${path.separator}ext${file.separator}jboss-logging-spi.jar\
+  ${path.separator}ext${file.separator}*\
   ${path.separator}tests${file.separator}build${file.separator}classes${file.separator}\
   ${path.separator}dbdrivers${file.separator}selected_dbdriver${file.separator}*\
   ${path.separator}dbdrivers${file.separator}jcc.jar\
   ${path.separator}dbdrivers${file.separator}mysql-connector-java.jar\
   ${path.separator}dbdrivers${file.separator}ojdbc8.jar\
   ${path.separator}dbdrivers${file.separator}postgresql.jar\
-  ${path.separator}ext${file.separator}log4j.jar
+  ${path.separator}ext${file.separator}log4j-core.jar
 
 #
 # properties used by the tests or test framework:
