--- a/qa/pom.xml
+++ b/qa/pom.xml
@@ -25,20 +25,63 @@
   <name>Narayana: qa</name>
 
   <dependencies>
+
+    <!-- Narayana dependencies -->
+    <dependency>
+      <groupId>org.jboss.narayana.jts</groupId>
+      <artifactId>narayana-jts-idlj</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.narayana.jts</groupId>
+      <artifactId>narayana-jts-integration</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.narayana.jta</groupId>
+      <artifactId>narayana-jta</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.narayana</groupId>
+      <artifactId>test-utils</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>ant-contrib</groupId>
+      <artifactId>ant-contrib</artifactId>
+      <version>1.0b3</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.messaging.mq</groupId>
+      <artifactId>fscontext</artifactId>
+      <version>4.6-b01</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.19.0</version>
+    </dependency>
     <dependency>
       <groupId>org.jboss.logging</groupId>
       <artifactId>jboss-logging</artifactId>
       <version>${version.org.jboss.logging.jboss-logging}</version>
     </dependency>
     <dependency>
-      <groupId>org.jboss.spec.javax.transaction</groupId>
-      <artifactId>jboss-transaction-api_1.2_spec</artifactId>
-      <version>1.0.0.Final</version>
+      <groupId>jakarta.transaction</groupId>
+      <artifactId>jakarta.transaction-api</artifactId>
+      <version>${version.jakarta.transaction.jakarta-transaction-api}</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>${version.junit}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-core</artifactId>
+      <version>1.3</version>
     </dependency>
     <dependency>
       <groupId>jboss.profiler.jvmti</groupId>
@@ -51,9 +94,24 @@
       <version>${version.org.apache.ant}</version>
     </dependency>
     <dependency>
-      <groupId>javax</groupId>
-      <artifactId>javaee-api</artifactId>
-      <version>${version.javax.javaee-api}</version>
+      <groupId>org.jacoco</groupId>
+      <artifactId>org.jacoco.ant</artifactId>
+      <version>${version.org.jacoco}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jacoco</groupId>
+      <artifactId>org.jacoco.report</artifactId>
+      <version>${version.org.jacoco}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jacoco</groupId>
+      <artifactId>org.jacoco.core</artifactId>
+      <version>${version.org.jacoco}</version>
+    </dependency>
+    <dependency>
+      <groupId>jakarta.platform</groupId>
+      <artifactId>jakarta.jakartaee-api</artifactId>
+      <version>10.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.jboss</groupId>
@@ -61,9 +119,9 @@
       <version>${version.org.jboss.jboss-transaction-spi}</version>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana.jts</groupId>
-      <artifactId>narayana-jts-idlj</artifactId>
-      <version>${project.version}</version>
+      <groupId>org.jboss.remoting</groupId>
+      <artifactId>jboss-remoting</artifactId>
+      <version>5.0.25.Final</version>
     </dependency>
     <dependency>
       <groupId>com.oracle.database.jdbc</groupId>
@@ -87,14 +145,19 @@
     </dependency>
     <dependency>
       <groupId>org.jboss.openjdk-orb</groupId>
-      <artifactId>openjdk-orb</artifactId>
+      <artifactId>openjdk-orb-jakarta</artifactId>
       <version>${version.org.jboss.openjdk-orb}</version>
     </dependency>
     <dependency>
       <groupId>org.jboss.openjdk-orb</groupId>
-      <artifactId>openjdk-orb</artifactId>
+      <artifactId>openjdk-orb-jakarta</artifactId>
       <version>${version.org.jboss.openjdk-orb}</version>
       <classifier>sources</classifier>
+    </dependency>
+    <dependency>
+      <groupId>com.ibm.ws</groupId>
+      <artifactId>orb</artifactId>
+      <version>7.0.0.23</version>
     </dependency>
   </dependencies>
 
@@ -152,17 +215,10 @@
         <artifactId>maven-dependency-plugin</artifactId>
 
         <configuration>
-          <excludeGroupIds>org.jboss.spec.javax.transaction,
-            junit,
-            jboss.profiler.jvmti,
-            org.apache.ant,
-            javax,
-            org.jboss.narayana,
-            com.oracle.database.jdbc,
+          <excludeGroupIds>com.oracle.database.jdbc,
             org.postgresql,
             mysql,
             com.ibm.db2</excludeGroupIds>
-          <excludeArtifactIds>jboss-transaction-spi</excludeArtifactIds>
           <outputDirectory>./ext</outputDirectory>
           <overWriteReleases>false</overWriteReleases>
           <overWriteSnapshots>false</overWriteSnapshots>
@@ -179,6 +235,14 @@
          -->
         <executions>
           <execution>
+            <id>dependencies</id>
+            <goals>
+              <goal>copy-dependencies</goal>
+            </goals>
+            <phase>install</phase>
+          </execution>
+          <execution>
+            <id>drivers</id>
             <goals>
               <goal>copy-dependencies</goal>
             </goals>
